test-suite/typecheck/pass/adt_constructor_args.first
import * "Prelude"
function f() -> Option<Int> {
  return some(42);
}
