test-suite/typecheck/fail/type_mismatch_return.first
function f() -> Int {
  return "not an int";
}
